--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <h1>Internet Status Checker</h1>
         <div class="status">
             <p><strong>Connection Status:</strong><span id="statusText">Checking...</span></p>
-            <p><strong>IP Address:</strong><span id="statusText">-</span></p>
-            <p><strong>Network Strength:</strong><span id="statusText">-</span></p>
+            <p><strong>IP Address:</strong><span id="ipAddressText">-</span></p>
+            <p><strong>Network Strength:</strong><span id="networkStrengthText">-</span></p>
         </div>
     </div>
 
